--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -4,7 +4,7 @@
 
 <!-- Custom CSS via inline styles
      You may use this template to add custom CSS to your site like so: -->
-<!--
+
 <style>
 :root {
     /* see variables.scss for more variables*/
@@ -14,6 +14,8 @@
     --section-light-bg-color: #ffdb8c!important;
     --section-dark-bg-color: #035e00!important;
     */
+    --cover-text-color: #ff0000!important;
+    --highlight: #000000!important;
 
      /* define list element for unnumbered lists, leave empty for default list element */
      /* fa-asterisk is the default icon if this variable definition is missing completely */
@@ -21,7 +23,7 @@
      --ul-li-icon: ;                /* this sets the default html list icon */
 }
 </style>
--->
+
 
 <!-- Custom CSS via "custom.css"-file
      If you would rather place your custom CSS into
